...
                                        <animations/>
                                        <color key="backgroundColor" red="0.08235294118" green="0.08235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Calendar">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                        <animations/>
                                        <color key="backgroundColor" red="0.08235294118" green="0.08235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Monthly" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="59n-Tk-BOZ">
                                <rect key="frame" x="20" y="157" width="560" height="21"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sy7-QE-mLX">
                                <rect key="frame" x="25" y="186" width="54" height="30"/>
                                <animations/>
                                <state key="normal" title="Prev">
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Posted" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n9h-KR-QM4">
                                                    <rect key="frame" x="258" y="11" width="51" height="21"/>
                                                    <animations/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
...
                                <rect key="frame" x="501" y="309" width="79" height="30"/>
                                <animations/>
                                <state key="normal" title="Post Month">
                                    <color key="titleColor" red="0.08235294118" green="0.08235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <rect key="frame" x="519" y="260" width="61" height="30"/>
                                <animations/>
                                <state key="normal" title="Post Day">
                                    <color key="titleColor" red="0.08235294118" green="0.08235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Events" id="MXv-PN-6nb">
                        <barButtonItem key="leftBarButtonItem" style="plain" id="2UF-K6-npZ">
                            <button key="customView" opaque="NO" tag="205" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YPZ-hN-rav">
...
                                <animations/>
                                <color key="backgroundColor" red="0.08235294118" green="0.08235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Edit Event" id="fUi-Oe-jzp">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="x0q-ht-dWG">
                            <connections>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAt-8z-D0r">
                                <rect key="frame" x="261" y="28" width="78" height="21"/>
                                <animations/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Thank you for registering!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXJ-Bl-iYG">
                                <rect key="frame" x="20" y="291" width="560" height="111"/>
                                <animations/>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZtS-z0-GpX">
                                <rect key="frame" x="195" y="400" width="210" height="30"/>
                                <animations/>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BFy-Te-GNh">
                                <rect key="frame" x="195" y="339" width="210" height="30"/>
                                <animations/>
...
