...
                    </connections>
                </button>
                <button opaque="NO" tag="201" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ifb-kc-Z3Z">
                    <rect key="frame" x="376" y="8" width="87" height="30"/>
                    <animations/>
                    <color key="backgroundColor" red="0.08235294118" green="0.08235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    <state key="normal" title="Delete Event">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                            <integer key="value" value="5"/>
                        </userDefinedRuntimeAttribute>
...
                    </connections>
                </button>
                <button opaque="NO" tag="203" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xcB-gq-8pl">
                    <rect key="frame" x="270" y="256" width="57" height="30"/>
                    <animations/>
                    <color key="backgroundColor" red="0.08235294118" green="0.08235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    <state key="normal" title="Register">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                            <integer key="value" value="5"/>
                        </userDefinedRuntimeAttribute>
...
